--- a/IDCA.Test/IDCA.Test.csproj
+++ b/IDCA.Test/IDCA.Test.csproj
@@ -14,8 +14,6 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\IDCA.Client\IDCA.Client.csproj" />
-  </ItemGroup>
+  <Import Project="..\IDCA.Bll\IDCA.Bll.projitems" Label="Shared" />
 
 </Project>
