--- a/IDCA.Client/IDCA.Client.csproj
+++ b/IDCA.Client/IDCA.Client.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>True</UseWindowsForms>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <Import Project="..\IDCA.Bll\IDCA.Bll.projitems" Label="Shared" />
@@ -38,8 +39,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="View\" />
   </ItemGroup>
 
 </Project>
