--- a/IDCA.Test/IDCA.Test.csproj
+++ b/IDCA.Test/IDCA.Test.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
 
   <Import Project="..\IDCA.Bll\IDCA.Bll.projitems" Label="Shared" />
