--- a/IDCA.Client/Properties/Settings.settings
+++ b/IDCA.Client/Properties/Settings.settings
@@ -5,5 +5,29 @@
     <Setting Name="Templates" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MetadataCategoricalLabel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">V</Value>
+    </Setting>
+    <Setting Name="AxisBaseLabel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Base : </Value>
+    </Setting>
+    <Setting Name="AxisSigmaLabel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Sigma</Value>
+    </Setting>
+    <Setting Name="AxisNetAheadLabel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Net.</Value>
+    </Setting>
+    <Setting Name="AxisNetInsertEmptyLine" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="AxisTopBottomBoxPositon" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="AxisCombinePosition" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="TableSummaryLabel" Type="System.String" Scope="User">
+      <Value Profile="(Default)"> - Summary</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
