修改模板类，添加默认模板

--- a/IDCA.Client/Properties/Settings.settings
+++ b/IDCA.Client/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="TableSummaryLabel" Type="System.String" Scope="User">
       <Value Profile="(Default)"> - Summary</Value>
     </Setting>
+    <Setting Name="TemplateRootPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
