修改模板类和模板集合类，修改模板参数值类型为TemplateValue类型

--- a/Template/Dimensions多期模板/job.ini
+++ b/Template/Dimensions多期模板/job.ini
@@ -1,5 +1,5 @@
-#define JOB_ROOT "$[JobProjectPath]"
-#define INPUT_METADATA "$[JobMetaDataName]"
+#define JOB_ROOT $[JobProjectPath]
+#define INPUT_METADATA $[JobMetaDataName]
 #define OUTPUTFOLDER "..\Report\"
 
 '-----Variables in BAT--------------------------------------------------------------------------------
@@ -8,9 +8,9 @@
 
 'MDD Base Language (e.g. ENU, ENG, CHS)
 
-#define LOCALE "$[JobLanguageShortCode]"
-#define LOCALE_DMS "$[JobLanguageLongCode]"
-#define MDD_TYPE "$[JobContextType]"
+#define LOCALE $[JobLanguageShortCode]
+#define LOCALE_DMS $[JobLanguageLongCode]
+#define MDD_TYPE $[JobContextType]
 
 'Whether use Automation Spec Section
 #define AUTO_SPEC FALSE'TRUE'
