--- a/IDCA.Client/Properties/Settings.settings
+++ b/IDCA.Client/Properties/Settings.settings
@@ -23,7 +23,7 @@
     <Setting Name="AXIS_TOP_BOTTOM_BOX_POSITION" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="AXIS_COMBINE_POSITION" Type="System.Int32" Scope="User">
+    <Setting Name="AXIS_NET_TYPE" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="TABLE_SUMMARY_LABEL" Type="System.String" Scope="User">
