--- a/IDCA.Client/IDCA.Client.csproj
+++ b/IDCA.Client/IDCA.Client.csproj
@@ -37,11 +37,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
+    <PackageReference Include="ControlzEx" Version="5.0.1" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MahApps.Metro">
+      <HintPath>MahApps.Metro.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <Import Project="..\IDCA.Model\IDCA.Model.projitems" Label="Shared" />
